z-index-fix

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -37,7 +37,7 @@ header{
     background-color: transparent;
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 900;
     /* height: ; */
 }
 
